--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
   <span>
-    &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> സെക്കന്റ് ലാംഗ്വേജ്
+    &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> നാര.ങ്ങ
   </span>
 </footer>
